# narcpm_packages

./: README.md
SDL2/: CMakeLists.txt  SDL2.config
assimp/: CMakeLists.txt  assimp.config
boost/: CMakeLists.txt  boost.config
glew/: CMakeLists.txt  glew.config
glfw/: CMakeLists.txt  glfw.config
gli/: CMakeLists.txt  gli.config
glm/: CMakeLists.txt  glm.config
gsl/: CMakeLists.txt  gsl.config
nanogui/: CMakeLists.txt  nanogui.config
nuklear/: CMakeLists.txt  nuklear.config
sdl2/: CMakeLists.txt
