cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
project(boost VERSION 0.0.0 LANGUAGES C)

execute_process(COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
execute_process(COMMAND ${CMAKE_COMMAND} -E rename libSDL2-2.0.so.1 libSDL2.so.1)
execute_process(COMMAND ${CMAKE_COMMAND} -E remove libSDL2-2.0.so)
execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink libSDL2.so.1 libSDL2.so)
install(FILES libSDL2.a libSDL2main.a libSDL2-2.0.so libSDL2-2.0.so.1 DESTINATION ${PACKAGE_ROOT}/lib/${TOOLCHAIN}/${CMAKE_BUILD_TYPE})
file(GLOB_RECURSE include ${PACKAGE_ROOT}/repository/include/*.h)
install(FILES ${include} DESTINATION ${PACKAGE_ROOT}/include/SDL2)
