cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
project(assimp VERSION 0.0.0 LANGUAGES CXX)

execute_process(COMMAND ${CMAKE_COMMAND} -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
execute_process(COMMAND ${CMAKE_COMMAND} -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
execute_process(COMMAND ${CMAKE_COMMAND} -E rename code/libassimpd.a code/libassimp.a)
execute_process(COMMAND ${CMAKE_COMMAND} -E rename code/libassimpd.so.3.3.1 code/libassimp.so)
set(BUILD_DIR ${PACKAGE_ROOT}/build/${TOOLCHAIN}/${CMAKE_BUILD_TYPE}/code)
install(FILES ${BUILD_DIR}/libassimp.a ${BUILD_DIR}/libassimp.so DESTINATION ${PACKAGE_ROOT}/lib/${TOOLCHAIN}/${CMAKE_BUILD_TYPE})
install(DIRECTORY ${PACKAGE_ROOT}/repository/include/assimp DESTINATION ${PACKAGE_ROOT}/include)
