cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
project(glfw VERSION 0.0.0 LANGUAGES C)

execute_process(COMMAND ${CMAKE_COMMAND} -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
execute_process(COMMAND ${CMAKE_COMMAND} -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
set(BUILD_DIR ${PACKAGE_ROOT}/build/${TOOLCHAIN}/${CMAKE_BUILD_TYPE})
file(GLOB_RECURSE libs ${PACKAGE_ROOT}/build/${TOOLCHAIN}${CMAKE_BUILD_TYPE}/src/libglfw*)
message(${libs})
install(FILES ${libs} DESTINATION ${PACKAGE_ROOT}/lib/${TOOLCHAIN}/${BUILD_TYPE})
install(DIRECTORY ${PACKAGE_ROOT}/repository/include/GLFW DESTINATION ${PACKAGE_ROOT}/include)
