cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
project(nanogui VERSION 0.0.0 LANGUAGES CXX)

set(CXX_FLAGS "-std=c++1z")
if (${TOOLCHAIN} MATCHES "clang")
	set(CXX_FLAGS "${CXX_FLAGS} -stdlib=libc++")
endif()

execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${PACKAGE_ROOT}/repository git submodule update --init --recursive)
execute_process(COMMAND ${CMAKE_COMMAND} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DNANOGUI_BUILD_SHARED=ON -DNANOGUI_BUILD_PYTHON=OFF -DNANOGUI_BUILD_EXAMPLE=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
execute_process(COMMAND ${CMAKE_COMMAND} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DNANOGUI_BUILD_SHARED=OFF -DNANOGUI_BUILD_PYTHON=OFF -DNANOGUI_BUILD_EXAMPLE=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${PACKAGE_ROOT}/repository)
execute_process(COMMAND make -j 8)
set(BUILD_DIR ${PACKAGE_ROOT}/build/${TOOLCHAIN}/${CMAKE_BUILD_TYPE})
install(FILES ${BUILD_DIR}/libnanogui.so ${BUILD_DIR}/libnanogui.a DESTINATION ${PACKAGE_ROOT}/lib/${TOOLCHAIN}/${CMAKE_BUILD_TYPE})
install(DIRECTORY ${PACKAGE_ROOT}/repository/include/nanogui DESTINATION ${PACKAGE_ROOT}/include)
install(DIRECTORY ${PACKAGE_ROOT}/repository/ext/eigen/Eigen DESTINATION ${PACKAGE_ROOT}/include)
install(DIRECTORY ${PACKAGE_ROOT}/repository/ext/glfw/include/GLFW DESTINATION ${PACKAGE_ROOT}/include)
file(GLOB_RECURSE nanovg_include ${PACKAGE_ROOT}/repository/ext/nanovg/src/*.h)
install(FILES ${nanovg_include} DESTINATION ${PACKAGE_ROOT}/include)
